docs/v0.0.4/_sources/gallery/classifier_dense.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/classifier_dense.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_classifier_dense.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_classifier_dense.py:


DenseNet Classifier: Detecting Regions of Interest in Synthetic Signals
=======================================================================

This example demonstrates how to use DeepPeak's DenseNet classifier to identify
regions of interest (ROIs) in synthetic 1D signals containing Gaussian peaks.

We will:
- Generate a dataset of noisy signals with random Gaussian peaks
- Build and train a DenseNet classifier to detect ROIs
- Visualize the training process and model predictions

.. note::
    This example is fully reproducible and suitable for Sphinx-Gallery documentation.

.. GENERATED FROM PYTHON SOURCE LINES 19-21

Imports and reproducibility
--------------------------

.. GENERATED FROM PYTHON SOURCE LINES 21-29

.. code-block:: Python

    import numpy as np

    from DeepPeak.machine_learning.classifier import DenseNet
    from DeepPeak.signals import SignalDatasetGenerator
    from DeepPeak import kernel

    np.random.seed(42)








.. GENERATED FROM PYTHON SOURCE LINES 30-32

Generate synthetic dataset
-------------------------

.. GENERATED FROM PYTHON SOURCE LINES 32-53

.. code-block:: Python

    NUM_PEAKS = 3
    SEQUENCE_LENGTH = 200

    kernel = kernel.Lorentzian(
        amplitude=(10, 30),
        position=(0, SEQUENCE_LENGTH),
        width=(3, 6),
    )

    generator = SignalDatasetGenerator(sequence_length=SEQUENCE_LENGTH)

    dataset = generator.generate(
        n_samples=300,
        kernel=kernel,
        n_peaks=(1, NUM_PEAKS),
        noise_std=0.1,
        categorical_peak_count=False,
    )

    dataset.compute_region_of_interest(width_in_pixels=5)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    DataSet(signals, amplitudes, positions, widths, labels, x_values, num_peaks)



.. GENERATED FROM PYTHON SOURCE LINES 54-56

Visualize a few example signals and their regions of interest
------------------------------------------------------------

.. GENERATED FROM PYTHON SOURCE LINES 56-58

.. code-block:: Python

    dataset.plot(number_of_samples=3)




.. image-sg:: /gallery/images/sphx_glr_classifier_dense_001.png
   :alt: Sample 0, Sample 1, Sample 2
   :srcset: /gallery/images/sphx_glr_classifier_dense_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Figure size 800x900 with 3 Axes>



.. GENERATED FROM PYTHON SOURCE LINES 59-61

Build and summarize the DenseNet classifier
------------------------------------------

.. GENERATED FROM PYTHON SOURCE LINES 61-73

.. code-block:: Python

    dense_net = DenseNet(
        sequence_length=SEQUENCE_LENGTH,
        filters=(32, 64, 128),
        dilation_rates=(1, 2, 4),
        kernel_size=3,
        optimizer="adam",
        loss="binary_crossentropy",
        metrics=["accuracy"],
    )
    dense_net.build()
    dense_net.summary()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Model: "DenseNetDetector"
    ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓
    ┃ Layer (type)                    ┃ Output Shape           ┃       Param # ┃
    ┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩
    │ input (InputLayer)              │ (None, 200, 1)         │             0 │
    ├─────────────────────────────────┼────────────────────────┼───────────────┤
    │ conv_0 (Conv1D)                 │ (None, 200, 32)        │           128 │
    ├─────────────────────────────────┼────────────────────────┼───────────────┤
    │ conv_1 (Conv1D)                 │ (None, 200, 64)        │         6,208 │
    ├─────────────────────────────────┼────────────────────────┼───────────────┤
    │ conv_2 (Conv1D)                 │ (None, 200, 128)       │        24,704 │
    ├─────────────────────────────────┼────────────────────────┼───────────────┤
    │ ROI (Conv1D)                    │ (None, 200, 1)         │           129 │
    └─────────────────────────────────┴────────────────────────┴───────────────┘
     Total params: 31,169 (121.75 KB)
     Trainable params: 31,169 (121.75 KB)
     Non-trainable params: 0 (0.00 B)




.. GENERATED FROM PYTHON SOURCE LINES 74-76

Train the classifier
--------------------

.. GENERATED FROM PYTHON SOURCE LINES 76-84

.. code-block:: Python

    history = dense_net.fit(
        dataset.signals,
        dataset.region_of_interest,
        validation_split=0.2,
        epochs=20,
        batch_size=64,
    )





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Epoch 1/20
    1/4 ━━━━━━━━━━━━━━━━━━━━ 2s 984ms/step - accuracy: 0.0465 - loss: 0.8173    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 22ms/step - accuracy: 0.3923 - loss: 0.7514 
    Epoch 1: val_loss improved from None to 0.62909, saving model to /tmp/wavenet_ckpt_xeohtb4x/best.weights.h5
        4/4 ━━━━━━━━━━━━━━━━━━━━ 1s 93ms/step - accuracy: 0.6278 - loss: 0.7065 - val_accuracy: 0.9502 - val_loss: 0.6291
    Epoch 2/20
    1/4 ━━━━━━━━━━━━━━━━━━━━ 0s 36ms/step - accuracy: 0.9493 - loss: 0.6236    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 22ms/step - accuracy: 0.9500 - loss: 0.6166
    Epoch 2: val_loss improved from 0.62909 to 0.54565, saving model to /tmp/wavenet_ckpt_xeohtb4x/best.weights.h5
        4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 43ms/step - accuracy: 0.9503 - loss: 0.6068 - val_accuracy: 0.9531 - val_loss: 0.5456
    Epoch 3/20
    1/4 ━━━━━━━━━━━━━━━━━━━━ 0s 36ms/step - accuracy: 0.9546 - loss: 0.5528    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 21ms/step - accuracy: 0.9632 - loss: 0.5394
    Epoch 3: val_loss improved from 0.54565 to 0.48366, saving model to /tmp/wavenet_ckpt_xeohtb4x/best.weights.h5
        4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 42ms/step - accuracy: 0.9719 - loss: 0.5260 - val_accuracy: 0.9929 - val_loss: 0.4837
    Epoch 4/20
    1/4 ━━━━━━━━━━━━━━━━━━━━ 0s 36ms/step - accuracy: 0.9922 - loss: 0.5024    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 22ms/step - accuracy: 0.9918 - loss: 0.4831
    Epoch 4: val_loss improved from 0.48366 to 0.42284, saving model to /tmp/wavenet_ckpt_xeohtb4x/best.weights.h5
        4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 43ms/step - accuracy: 0.9914 - loss: 0.4684 - val_accuracy: 0.9880 - val_loss: 0.4228
    Epoch 5/20
    1/4 ━━━━━━━━━━━━━━━━━━━━ 0s 36ms/step - accuracy: 0.9841 - loss: 0.4332    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 21ms/step - accuracy: 0.9841 - loss: 0.4223
    Epoch 5: val_loss improved from 0.42284 to 0.36460, saving model to /tmp/wavenet_ckpt_xeohtb4x/best.weights.h5
        4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 42ms/step - accuracy: 0.9844 - loss: 0.4122 - val_accuracy: 0.9908 - val_loss: 0.3646
    Epoch 6/20
    1/4 ━━━━━━━━━━━━━━━━━━━━ 0s 35ms/step - accuracy: 0.9886 - loss: 0.3782    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 22ms/step - accuracy: 0.9897 - loss: 0.3665
    Epoch 6: val_loss improved from 0.36460 to 0.30474, saving model to /tmp/wavenet_ckpt_xeohtb4x/best.weights.h5
        4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 43ms/step - accuracy: 0.9905 - loss: 0.3526 - val_accuracy: 0.9932 - val_loss: 0.3047
    Epoch 7/20
    1/4 ━━━━━━━━━━━━━━━━━━━━ 0s 35ms/step - accuracy: 0.9920 - loss: 0.3101    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 21ms/step - accuracy: 0.9912 - loss: 0.2999
    Epoch 7: val_loss improved from 0.30474 to 0.24109, saving model to /tmp/wavenet_ckpt_xeohtb4x/best.weights.h5
        4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 42ms/step - accuracy: 0.9908 - loss: 0.2910 - val_accuracy: 0.9934 - val_loss: 0.2411
    Epoch 8/20
    1/4 ━━━━━━━━━━━━━━━━━━━━ 0s 36ms/step - accuracy: 0.9907 - loss: 0.2485    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 22ms/step - accuracy: 0.9912 - loss: 0.2362
    Epoch 8: val_loss improved from 0.24109 to 0.17722, saving model to /tmp/wavenet_ckpt_xeohtb4x/best.weights.h5
        4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 43ms/step - accuracy: 0.9915 - loss: 0.2256 - val_accuracy: 0.9936 - val_loss: 0.1772
    Epoch 9/20
    1/4 ━━━━━━━━━━━━━━━━━━━━ 0s 37ms/step - accuracy: 0.9900 - loss: 0.1944    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 22ms/step - accuracy: 0.9917 - loss: 0.1751
    Epoch 9: val_loss improved from 0.17722 to 0.12103, saving model to /tmp/wavenet_ckpt_xeohtb4x/best.weights.h5
        4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 43ms/step - accuracy: 0.9924 - loss: 0.1619 - val_accuracy: 0.9932 - val_loss: 0.1210
    Epoch 10/20
    1/4 ━━━━━━━━━━━━━━━━━━━━ 0s 35ms/step - accuracy: 0.9920 - loss: 0.1239    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 22ms/step - accuracy: 0.9916 - loss: 0.1154
    Epoch 10: val_loss improved from 0.12103 to 0.07778, saving model to /tmp/wavenet_ckpt_xeohtb4x/best.weights.h5
        4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 43ms/step - accuracy: 0.9913 - loss: 0.1082 - val_accuracy: 0.9939 - val_loss: 0.0778
    Epoch 11/20
    1/4 ━━━━━━━━━━━━━━━━━━━━ 0s 36ms/step - accuracy: 0.9904 - loss: 0.0867    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 22ms/step - accuracy: 0.9914 - loss: 0.0767
    Epoch 11: val_loss improved from 0.07778 to 0.05074, saving model to /tmp/wavenet_ckpt_xeohtb4x/best.weights.h5
        4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 43ms/step - accuracy: 0.9920 - loss: 0.0692 - val_accuracy: 0.9947 - val_loss: 0.0507
    Epoch 12/20
    1/4 ━━━━━━━━━━━━━━━━━━━━ 0s 36ms/step - accuracy: 0.9934 - loss: 0.0547    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 22ms/step - accuracy: 0.9934 - loss: 0.0489
    Epoch 12: val_loss improved from 0.05074 to 0.03911, saving model to /tmp/wavenet_ckpt_xeohtb4x/best.weights.h5
        4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 43ms/step - accuracy: 0.9932 - loss: 0.0450 - val_accuracy: 0.9915 - val_loss: 0.0391
    Epoch 13/20
    1/4 ━━━━━━━━━━━━━━━━━━━━ 0s 36ms/step - accuracy: 0.9933 - loss: 0.0307    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 21ms/step - accuracy: 0.9930 - loss: 0.0321
    Epoch 13: val_loss improved from 0.03911 to 0.03043, saving model to /tmp/wavenet_ckpt_xeohtb4x/best.weights.h5
        4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 42ms/step - accuracy: 0.9927 - loss: 0.0343 - val_accuracy: 0.9929 - val_loss: 0.0304
    Epoch 14/20
    1/4 ━━━━━━━━━━━━━━━━━━━━ 0s 35ms/step - accuracy: 0.9933 - loss: 0.0233    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 21ms/step - accuracy: 0.9924 - loss: 0.0266
    Epoch 14: val_loss improved from 0.03043 to 0.02755, saving model to /tmp/wavenet_ckpt_xeohtb4x/best.weights.h5
        4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 43ms/step - accuracy: 0.9921 - loss: 0.0278 - val_accuracy: 0.9938 - val_loss: 0.0275
    Epoch 15/20
    1/4 ━━━━━━━━━━━━━━━━━━━━ 0s 36ms/step - accuracy: 0.9930 - loss: 0.0223    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 21ms/step - accuracy: 0.9925 - loss: 0.0248
    Epoch 15: val_loss improved from 0.02755 to 0.02500, saving model to /tmp/wavenet_ckpt_xeohtb4x/best.weights.h5
        4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 42ms/step - accuracy: 0.9926 - loss: 0.0251 - val_accuracy: 0.9937 - val_loss: 0.0250
    Epoch 16/20
    1/4 ━━━━━━━━━━━━━━━━━━━━ 0s 35ms/step - accuracy: 0.9924 - loss: 0.0263    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 21ms/step - accuracy: 0.9928 - loss: 0.0243
    Epoch 16: val_loss improved from 0.02500 to 0.02492, saving model to /tmp/wavenet_ckpt_xeohtb4x/best.weights.h5
        4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 43ms/step - accuracy: 0.9932 - loss: 0.0230 - val_accuracy: 0.9928 - val_loss: 0.0249
    Epoch 17/20
    1/4 ━━━━━━━━━━━━━━━━━━━━ 0s 35ms/step - accuracy: 0.9917 - loss: 0.0246    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 21ms/step - accuracy: 0.9925 - loss: 0.0229
    Epoch 17: val_loss improved from 0.02492 to 0.02304, saving model to /tmp/wavenet_ckpt_xeohtb4x/best.weights.h5
        4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 42ms/step - accuracy: 0.9931 - loss: 0.0217 - val_accuracy: 0.9941 - val_loss: 0.0230
    Epoch 18/20
    1/4 ━━━━━━━━━━━━━━━━━━━━ 0s 36ms/step - accuracy: 0.9931 - loss: 0.0206    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 22ms/step - accuracy: 0.9933 - loss: 0.0203
    Epoch 18: val_loss improved from 0.02304 to 0.02212, saving model to /tmp/wavenet_ckpt_xeohtb4x/best.weights.h5
        4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 43ms/step - accuracy: 0.9934 - loss: 0.0204 - val_accuracy: 0.9938 - val_loss: 0.0221
    Epoch 19/20
    1/4 ━━━━━━━━━━━━━━━━━━━━ 0s 35ms/step - accuracy: 0.9935 - loss: 0.0205    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 22ms/step - accuracy: 0.9938 - loss: 0.0194
    Epoch 19: val_loss improved from 0.02212 to 0.02198, saving model to /tmp/wavenet_ckpt_xeohtb4x/best.weights.h5
        4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 44ms/step - accuracy: 0.9937 - loss: 0.0195 - val_accuracy: 0.9947 - val_loss: 0.0220
    Epoch 20/20
    1/4 ━━━━━━━━━━━━━━━━━━━━ 0s 36ms/step - accuracy: 0.9941 - loss: 0.0168    4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 22ms/step - accuracy: 0.9939 - loss: 0.0178
    Epoch 20: val_loss improved from 0.02198 to 0.02174, saving model to /tmp/wavenet_ckpt_xeohtb4x/best.weights.h5
        4/4 ━━━━━━━━━━━━━━━━━━━━ 0s 44ms/step - accuracy: 0.9936 - loss: 0.0191 - val_accuracy: 0.9931 - val_loss: 0.0217
    Restored best model weights from /tmp/wavenet_ckpt_xeohtb4x/best.weights.h5




.. GENERATED FROM PYTHON SOURCE LINES 85-87

Plot training history
---------------------

.. GENERATED FROM PYTHON SOURCE LINES 87-88

.. code-block:: Python

    dense_net.plot_model_history()



.. image-sg:: /gallery/images/sphx_glr_classifier_dense_002.png
   :alt: Losses, Metrics
   :srcset: /gallery/images/sphx_glr_classifier_dense_002.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Figure size 900x720 with 2 Axes>




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 5.334 seconds)


.. _sphx_glr_download_gallery_classifier_dense.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: classifier_dense.ipynb <classifier_dense.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: classifier_dense.py <classifier_dense.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: classifier_dense.zip <classifier_dense.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
